# t-stonks

./: .editorconfig  .gitattributes  .gitignore  CLAUDE.md  README.md  pyproject.toml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/workflows/: workflow-registry.json
docs/adr/: 0001-store-calendar-actuals-as-keyed-overlay.md
scripts/: smoke_data.py
specs/001-macro-economic-calendar/: data-model.md  quickstart.md  research.md  spec.md
specs/002-charts-and-stock-tiles/: data-model.md  plan.md  quickstart.md  spec.md  (+2 more)
tests/: conftest.py  test_analysis_framework.py  test_backtest.py  test_backtest_parity.py  test_calendar_actuals.py  test_calendar_actuals_store.py  test_calendar_event_screen.py  test_calendar_expectations.py  test_calendar_panel.py  test_calendar_service_actuals.py  test_chart_zoom.py  test_chart_zoom_width.py  test_claude_runner.py  test_commodity_copper.py  test_fred.py  test_futures_strip.py  test_history_store.py  test_html_writer.py  test_index_service.py  test_index_tile.py  test_insider_config.py  test_market_timeline.py  test_metal_panel_indicators.py  test_metals_service.py  test_minicharts_settings.py  test_news_log_screen.py  test_news_panel_click.py  test_news_time.py  test_omx_strip.py  test_price_alerts.py  test_prompt_builder.py  test_rate_tile.py  test_rates_service.py  test_ratio_tile.py  test_reference_quote.py  test_report_controller.py  test_report_index.py  test_report_phase.py  test_report_service_watchlist.py  test_report_unavailable.py  (+15 more)
(+164 files in other folders)
