[project]
name = "goldsilver"
version = "0.1.0"
description = "Fast terminal TUI for live gold & silver, macro drivers, stocks, futures, FX, news and trading signals, with AI-assisted market reports."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Dawid", email = "dwcy@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "textual>=8.2.7",
    "textual-plotext>=1.0.1",
    "yfinance>=1.4.0",
]

[project.scripts]
goldsilver = "goldsilver:main"
quantum = "quantum:main"

[build-system]
requires = ["uv_build>=0.11.9,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
